--- a/src/config/config.json
+++ b/src/config/config.json
@@ -7,6 +7,40 @@
       "isEnabled": false,
       "key": "",
       "ca": ""
+    },
+    "headers": [
+      { "name": "Access-Control-Allow-Origin", "value": "*" },
+      {
+        "name": "Access-Control-Allow-Headers",
+        "value": "Origin, X-Requested-With, Content-Type, Accept"
+      },
+      {
+        "name": "Access-Control-Allow-Methods",
+        "value": "GET,PUT,POST,DELETE,OPTIONS"
+      }
+    ]
+  },
+  "api": {
+    "route": "api",
+    "modules": [
+      { "name": "login", "path": "api/account", "route": "account/login" },
+      { "name": "signup", "path": "api/account", "route": "account/signup" },
+      { "name": "orders", "path": "api/crm/orders", "route": "crm/orders" }
+    ]
+  },
+  "services": [
+    { "name": "ServiceLog", "endpointId": "log" },
+    { "name": "ServiceLogin", "endpointId": "login" },
+    { "name": "ServiceSignup", "endpointId": "signup" },
+    { "name": "ServiceOrders", "endpointId": "orders" }
+  ],
+  "serviceRegistry": {
+    "database": {
+      "name": "user_auth",
+      "user": "",
+      "password": "",
+      "host": "mongodb://localhost:",
+      "port": 27017
     }
   }
 }
